test_data/end_to_end/err__external_fn_must_be_unsafe/stderr.txt
error: external function must be marked as `unsafe`
  --> main.cz:1:4
1 | fn foo();
       ~~~

error: `main` function must not be external
  --> main.cz:3:1
3 | fn main();
    ~~~~~~~~~

error: external function must be marked as `unsafe`
  --> main.cz:3:4
3 | fn main();
       ~~~~
